--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,17 @@
-<my-app>loading</my-app>
+<!doctype html>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<html lang="br">
+
+<head>
+  <meta charset="utf-8">
+  <title>9 Quadrinhos</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+  <app-root></app-root>
+</body>
+
+</html>
